--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,9 @@ language: python
 sudo: false
 python:
   - 3.5
+addons:
+  sonarcloud:
+    organization: pietrop88-github
 script:
 - python -m pytest --cov-report xml:coverage.xml --cov=./
+- sonar-scanner
